# tauri-vite-svelte-playground

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.run/: Run Tauri App.run.xml  Run dev server.run.xml  Run tauri app.run.xml  Svelte check.run.xml  Trunk Serve.run.xml  Vite build.run.xml  Vite preview.run.xml  build-prod.run.xml  format-frontend.run.xml  lint-frontend.run.xml  run-dev-server.run.xml  run-dev-simulator-app.run.xml  run-simulator-app.run.xml  run-simulator-backend.run.xml  simulator-build-debug.run.xml  svelte-check.run.xml  vite-build.run.xml  vite-preview.run.xml
docker/: .dockerignore  Dockerfile
src/: App.svelte  app.css  main.ts  main_menu.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  web_server.rs
src-tauri/src/server/: Cargo.toml  knop.sqlite  sql_server.rs  states.sqlite  terminal_server_main.rs
src-tauri/src/server/src/: main.rs  sql_server.rs  tcp_server.rs  terminal_server_main.rs  test_db.rs
src-tauri/src/web_server/: server.rs
src/lib/: test_counter_lib.svelte
