workspace = { members = ["src/server"] }
[package]
name = "gecko-9k33m-simulator"
version = "0.1.0"
description = "9K33M simulator built with tauri"
authors = ["Evgeniy G.", "Nikita M.", "Aleksey Y."]
license = "Apache-2.0"
repository = "https://github.com/EANsim/gecko"
default-run = "gecko-9k33m-simulator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
actix-web = "4"
sqlx = {version = "0.7.3", features = ["runtime-async-std", "mysql"] }
async-std = {version = "1.12", features = ["attributes"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }

[[bin]]
name = "terminal_server"
path = "src/server/terminal_server_main.rs"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

