[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
actix-web = "4"
sqlx = {version = "0.7.3", features = ["runtime-async-std", "mysql"] }
async-std = {version = "1.12", features = ["attributes"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
log = "0.4.16"
env_logger = "0.9.0"


[[bin]]
name = "test_db"
path = "src/test_db.rs"

[[bin]]
name = "terminal_server"
path = "src/terminal_server_main.rs"
